--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   "devDependencies": {
     "vitepress": "^1.0.0-alpha.45",
     "vue": "^3.2.47"
+  },
+  "scripts": {
+    "dev": "vitepress dev docs",
+    "build": "vitepress build docs",
+    "preview": "vitepress preview docs"
   }
 }
